Fixed up spacing

--- a/screen.css
+++ b/screen.css
@@ -2,6 +2,7 @@ body {
   background: url(images/bg-main.png);
   color: #202050;
   font-family: "museo-slab-1","museo-slab-2";
+  font-weight: 100;
   line-height: 1.5em;
 }
 
